# openquant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_correctness.yml  feature_request.yml
.github/workflows/: ci.yml  data-snapshot.yml  docs.yml  publish.yml  zoo-honesty-gate.yml
community/: cohort-program.md  discord-channels.md  good-first-issues.md
docs/: honest-backtesting.md  index.md  quickstart.md
docs/api/: index.md  oq-backtest.md  oq-broker.md  oq-core.md  oq-data.md  oq-mcp.md
docs/community/: 30-days.md  cohorts.md  contributing.md  discord.md  good-first-issues.md  index.md  zoo.md
docs/compliance/: disclaimer.md  index.md  sebi-2026.md
docs/cookbook/: broker-costs.md  first-backtest.md  index.md  mcp-claude.md  paper-to-live.md  pit-universes.md
examples/: mean_reversion.py  momentum_nifty.py
marketing/content/: 30-days-of-openquant.md
marketing/talks/: building-indias-open-source-quant-stack.md
