[project]
name = "openquant"
version = "0.0.0"
description = "OpenQuant India — honest, open source quant infrastructure for Indian markets (monorepo root)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenQuant India Contributors" }]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
oq-core = { workspace = true }
oq-backtest = { workspace = true }
oq-data = { workspace = true }
oq-mcp = { workspace = true }
oq-broker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "oq-core",
    "oq-backtest",
    "oq-data",
    "oq-mcp",
    "oq-broker",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages/*/tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
